Aboutページの追加

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   <header id="header">
-    <h2><a href="#main-v" class="btn">IT-Network</a></h2>
+    <h2><a href="index.html" class="btn">IT-Network</a></h2>
     <!-- ハンバーガーメニュー -->
     <div class="nav_toggle">
       <span></span>
@@ -25,7 +25,7 @@
     </div>
     <nav class="nav">
       <ul>
-        <li><a href="#main-v">Top</a></li>
+        <li><a href="index.html">Top</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -35,13 +35,14 @@
     <main id="main-v">
       <img src="img/build.jpg" alt="">
       <h1>Hello-<br>Newworld</h1>
-  </main>
+    </main>
+    <div class="black"></div>
     <section id="about">
-      <h3><a href="#main-v">About</a></h3>
+      <h3><a href="about.html">About</a></h3>
       <div class="bg-img1"></div>
       <div class="about-item">
         <div class="about-img">
-          <img src="img/pc.jpg" alt="">
+          <img src="img/pc.jpg" alt="デスクに置かれたパソコンの写真">
         </div>
          <div class="about-txt">
           <span>私たちは新しい未来を創造します!</span>
@@ -51,14 +52,24 @@
           </div>
         </div>
         </section>
+        <div class="black"></div>
     <section id="work">
-            <h3><a href="#main-v">Work</a></h3>
+            <h3><a href="work.html">Work</a></h3>
             <div class="bg-img2"></div>
             <div class="work-item">
               <div class="work-img">
-                <img src="img/floor.jpg" alt=""><img src="img/hearing.jpg" alt=""><img src="img/team.jpg" alt=""><img src="img/design.jpg" alt="">
+                <img src="img/floor.jpg" alt="会社内の就業写真"><img src="img/hearing.jpg" alt="お客様との打ち合わせの写真"><img src="img/team.jpg" alt="仲間とのコミニケーションの様子"><img src="img/design.jpg" alt="プロジェクトを進めているパソコンの画面写真">
               </div>
-              <div class="work-txt">
+              <div class="work-txt pc">
+                <span>未来の創造に取り組みます!</span>
+                <p>未来創造にコミットします。
+                   未来創造にコミットします。<br>
+                   未来創造にコミットします。
+                   未来創造にコミットします。<br>
+                   未来創造にコミットします。
+                   未来創造にコミットします。<br></p>
+              </div>
+              <div class="work-txt sp">
                 <span>未来の創造に取り組みます!</span>
                 <p>未来創造にコミットします。<br>
                    未来創造にコミットします。<br>
@@ -69,6 +80,7 @@
               </div>
             </div>
     </section>
+    <div class="black"></div>
     <section id="contact">
           <h3><a href="#main-v">Contact</a></h3>
           <div class="bg-img3"></div>
@@ -76,7 +88,7 @@
               <div class="contact-txt">
                 <p>NAME</p>
                 <input type="text" name="name" id="">
-                <p>E-mail</p>
+                <p>E-MAIL</p>
                 <input type="text" name="e-mail" id="">
                 <p>MESSAGE</p>
                 <textarea name="message" id="" cols="30" rows="10"></textarea>
