work.htmlの追加・work.htmlのメディアクリとabout.htmlのメディアクリの修正

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
   </header>
     <main id="main-v">
-      <img src="img/build.jpg" alt="">
+      <img src="img/build.jpg" alt="会社外観の写真">
       <h1>Hello-<br>Newworld</h1>
     </main>
     <div class="black"></div>
