--- a/work.html
+++ b/work.html
@@ -34,6 +34,32 @@
   </header>
     <article>
       <h1 class="heading" data-en="Work"><span>事業紹介</span></h1>
+        <div class="work-container1">
+          <div class="work-container1-img">
+            <img src="img/hearing.jpg" alt="お客様との打ち合わせの写真">
+          </div>
+          <div class="work-container1-txt">
+            <span>〜お客様との打ち合わせ〜</span>
+            <p>入念な打ち合わせにより、<br>
+              お客様の【想い】を形にします。 </p>
+            </div>
+        </div>
+      <div class="work-container2">
+        <div class="work-container2-img">
+          <img src="img/team.jpg" alt="仲間とのコミニケーションの様子"><img src="img/laptop.jpg" alt="個人でパソコン作業している写真">
+        </div>
+        <div class="work-container2-txt">
+          <span>~チーム・個人でコミットする~</span>
+          <p>お客様の【想い】にチームや<br>
+            個人でコミット致します。</p>
+            </div>
+          </div>
+            <div class="work-container3">
+
+            </div>
+            <div class="work-container4">
+
+            </div>
 
     </article>
 
