--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p>MESSAGE</p>
                 <textarea name="message" id="" cols="30" rows="10"></textarea>
                 <div class="btn">
-                  <a href="#main-v"><input type="button" value="送信" 
+                  <a href="#main-v"><input type="submit" value="送信" 
                     style="width: 230px; height: 50px;"></a>
                   </div>
                 </div>
